# fetcher

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRACT.md  README.md  fetcher_d3fend_issue.md  pyproject.toml
.agents/skills/: README.md  TRIGGERS.md  common.sh  dotenv_helper.py  json_utils.py  run-all-sanity.sh
.agents/skills/agent-inbox/: agent-inbox  inbox.py  sanity.sh
.agents/skills/arxiv/: SKILL.md  arxiv_cli.py  sanity.sh
.agents/skills/brave-search/: brave_search.py  sanity.sh
.agents/skills/code-review/: SKILL.md  code_review.py  review_request_comprehensive.md  review_request_post_fixes.md  review_request_self.md  test_review_request.md
.agents/skills/code-review/docs/: COPILOT_REVIEW_REQUEST_EXAMPLE.md
.agents/skills/code-review/sanity/: run_sanity.sh  test_anthropic_opus45.sh  test_github_gpt5.sh  test_github_gpt52.sh  test_openai_gpt52.sh  test_request.md
.agents/skills/context7/: context7.py  sanity.sh
.agents/skills/distill/: distill.py  run.sh  sanity.sh
.agents/skills/doc-to-qra/: run.sh  sanity.sh
.agents/skills/edge-verifier/: run.sh  schedule_template.json  verify_edges.py
.agents/skills/episodic-archiver/: SKILL.md  archive_episode.py  run.sh
.agents/skills/fetcher/: run.sh
.agents/skills/memory/: SKILL.md  run.sh  sanity.sh
.agents/skills/memory/sanity/: skill_sanity.py
.agents/skills/pdf-fixture/: create-fixture  run.sh
.agents/skills/perplexity/: perplexity.py  sanity.sh
.agents/skills/qra/: qra.py  run.sh  sanity.sh
.agents/skills/scillm/: SKILL.md  sanity.sh
.agents/skills/skills-sync/: SKILL.md  skills-sync
.agents/skills/surf/: SKILL.md  run.sh
.agents/skills/treesitter/: run.sh
.agents/skills/youtube-transcripts/: youtube_transcript.py
docs/: COPILOT_REVIEW_REQUEST.md  COPILOT_REVIEW_REQUEST_EXAMPLE.md  COPILOT_REVIEW_TEMPLATE.md  FEATURES.md  QUICKSTART.md  TASKS_CONSUMER.md  fetcher_sample_urls.audit.json  fetcher_sample_urls.jsonl  fetcher_sample_urls.md  oustanding_urls.md  outstanding_domains_summary.json  outstanding_table.md
docs/project_agent_convos/: 001.md
docs/smokes/: urls.jsonl
docs/task_plans/: 02_reliability.md
run/artifacts/sample/: alternate_urls_applied.jsonl  outstanding_domains_summary.json  outstanding_urls_summary.json
scripts/: compare_markdown_to_html.py  smoke_alternates_install.sh  smoke_fetcher_cli.sh
scripts/agents/: ack-conversation.sh  poll-conversations.sh  send-conversation.sh
src/fetcher/: __init__.py  cli.py  consumer.py
src/fetcher/core/: __init__.py  keys.py
src/fetcher/data/: README.md  mirror_sources.json  overrides.json
src/fetcher/tools/: mirror_refresher.py
src/fetcher/workflows/: __init__.py  alternate_urls.py  doctor.py  download_utils.py  extract_utils.py  fetcher.py  fetcher_config.py  fetcher_utils.py  github_utils.py  html_normalize.py  outstanding_utils.py  paywall_detector.py  paywall_utils.py  prefilters.py  web_fetch.py
test_fixtures/: smoke_local.html
tests/: test_consumer.py  test_consumer_downloads.py  test_d3fend_markdown_vs_html_integration.py  test_environment_warnings.py  test_extract_utils.py  test_fetcher_audit.py  test_fetcher_helpers.py  test_github_utils.py  test_metrics.py  test_mirror_refresher.py  test_outstanding_utils.py  test_paywall_utils.py  test_provenance.py  test_proxy_rotation.py
